# DocMind

./: .env  .envexample  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env  Dockerfile  pyproject.toml
backend/app/: celery_app.py  config.py  main.py
backend/app/core/: database.py  dependencies.py  vectorstore.py
backend/app/core/embeddings/: base.py  factory.py  gemini.py  huggingface.py  openai.py
backend/app/core/llm/: base.py  factory.py  gemini.py  huggingface.py  openai.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/routers/: auth.py  chat.py  chats.py  documents.py
backend/app/schemas/: auth.py  chat.py  document.py
backend/app/services/: auth_service.py  ingest_service.py  rag_service.py
backend/app/tasks/: ingest_task.py  ingest_tasks.py
backend/chroma_data/: chroma.sqlite3
backend/migrations/: env.py
backend/migrations/versions/: 01552dd90e2e_initial_tables.py  7b6455dc25e4_initial_tables.py  e477a53a81c9_initial_tables.py
eval/: golden_dataset.json  ground_truth.json  ragas_eval.py  run_eval.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/chat/[docId]/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/components/app/: ChatInput.tsx  ChatWindow.tsx  CitationCard.tsx  CitationPanel.tsx  DocumentCard.tsx  EmptyState.tsx  MessageBubble.tsx  SessionList.tsx  Sidebar.tsx  SourcesDrawer.tsx  StatCard.tsx  StreamingMessage.tsx  Topbar.tsx  UploadZone.tsx
frontend/components/auth/: AuthInput.tsx  AuthShell.tsx
frontend/components/marketing/: CTASection.tsx  ChatMockup.tsx  DemoSection.tsx  FeatureGrid.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LogoCloud.tsx  Navbar.tsx  Pricing.tsx  SectionEyebrow.tsx  SectionHeading.tsx
frontend/components/shared/: AnimatedGrid.tsx  GlassCard.tsx  GlowButton.tsx  GradientBlob.tsx  Logo.tsx  NoiseTexture.tsx
frontend/lib/: api.ts  types.ts  useAuth.ts  useStream.ts  utils.ts
