[project]
name = "docmind-backend"
version = "0.1.0"
description = "AI Document Intelligence SaaS backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.7.4",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart==0.0.9",
    "celery==5.3.6",
    "redis==5.0.4",
    "langchain==0.2.1",
    "langchain-community==0.2.1",
    "chromadb==0.5.0",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "httpx==0.27.0",
    "slowapi==0.1.9",
    "pydantic-settings==2.2.1",
    "google-generativeai>=0.5.4",
    "langchain-google-genai>=1.0.6",
    "bcrypt==4.0.1",
    "langchain-openai==0.1.23",
    "langchain-google-genai==1.0.10",
#    "sentence-transformers==2.7.0",
    "transformers==4.41.2",
    "accelerate==0.30.1",
    "torch==2.3.0",
    "docx2txt",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "ruff==0.4.4",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
